[package]
name = "quasi"
version = "0.3.0"
authors = ["Erick Tryzelaar <erick.tryzelaar@gmail.com>"]
license = "MIT/Apache-2.0"
description = "A quasi-quoting macro system"
repository = "https://github.com/erickt/rust-quasi"

[features]
default = ["syntex_syntax"]
nightly = []

[dependencies]
syntex_syntax = { version = "*", optional = true }
