[package]
name = "quasi_codegen"
version = "0.1.9"
authors = ["Erick Tryzelaar <erick.tryzelaar@gmail.com>"]
license = "MIT/Apache-2.0"
description = "A quasi-quoting macro system"
repository = "https://github.com/erickt/rust-quasi"

[features]
default = ["syntex", "syntex_syntax"]

[dependencies]
aster = "*"
syntex = { version = "*", optional = true }
syntex_syntax = { version = "*", optional = true }
