[package]
name = "quasi_codegen"
version = "0.3.0"
authors = ["Erick Tryzelaar <erick.tryzelaar@gmail.com>"]
license = "MIT/Apache-2.0"
description = "A quasi-quoting macro system"
repository = "https://github.com/erickt/rust-quasi"

[features]
default = ["aster-syntex"]
nightly = ["aster-syntax"]

[dependencies]
aster-syntax = { path = "../../rust-aster/aster-syntax", optional = true }
aster-syntex = { path = "../../rust-aster/aster-syntex", optional = true }
