[package]
name = "quasi_codegen_tests"
version = "0.3.0"
authors = ["Erick Tryzelaar <erick.tryzelaar@gmail.com>"]
license = "MIT/Apache-2.0"
description = "A quasi-quoting macro system"
repository = "https://github.com/erickt/rust-quasi"
build = "build.rs"

[build-dependencies]
quasi_codegen = { version = "*", path = "../quasi_codegen" }
syntex = "*"

[dev-dependencies]
aster-syntex = { path = "../../rust-aster/aster-syntex" }
quasi = { path = ".." }
syntex_syntax = "*"
