[package]
name = "quasi_macros"
version = "0.1.9"
authors = ["Erick Tryzelaar <erick.tryzelaar@gmail.com>"]
license = "MIT/Apache-2.0"
description = "A quasi-quoting macro system"
repository = "https://github.com/erickt/rust-quasi"

[lib]
name = "quasi_macros"
plugin = true

[features]
default = ["syntex", "syntex_syntax"]

[dependencies.aster]
version = "*"

[dependencies.syntex]
version = "*"
optional = true

[dependencies.syntex_syntax]
version = "*"
optional = true
